--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=apollo_hire;Username=postgres;Password=1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
