--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
     "@auth0/auth0-angular": "^2.6.0",
+    "@semantic-icons/tabler-icons": "^0.52.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
